Fix double scrollbar.

--- a/client/src/style/calendar/time-grid.scss
+++ b/client/src/style/calendar/time-grid.scss
@@ -56,6 +56,7 @@
 
 .cal-time-content-zone {
   @include cal-time-content;
+  overflow-y: hidden;
 }
 
 .cal-time-content {
